# deluge-web-client

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: mypy.yml  python-publish.yml  python_publish.yml  python_publish_testing.yml  ruff.yml  test.yml
deluge_web_client/: __init__.py  client.py  exceptions.py  response.py  state.py  types.py
docs/: api.rst  conf.py  index.rst  introduction.rst  modules.rst  requirements.txt
docs/_themes/: LICENSE
docs/api_doc/: client.rst  exceptions.rst  response.rst  state.rst
tests/: __init__.py  conftest.py  test_auth.py  test_client.py  test_label.py  test_path.py  test_state.py  test_torrent.py
