[tool.poetry]
name = "deluge-web-client"
version = "1.0.4"
description = "Deluge Web Client"
authors = ["jlw_4049 <jessielw4049@gmail.com>"]
maintainers = ["jlw_4049 <jessielw4049@gmail.com>"]
keywords = [
    "python",
    "deluge",
    "api",
    "client",
    "torrent",
    "torrents",
    "webui",
    "web",
]
license = "MIT"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
    "Topic :: Communications :: File Sharing",
]

[tool.project.urls]
"Homepage" = "https://github.com/jessielw/deluge-web-client"
"Documenatation" = "https://deluge-web-client.readthedocs.io"
"Source" = "https://github.com/jessielw/deluge-web-client"

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
sphinx = "7.4.7"
sphinx-autodoc-typehints = "2.3.0"
furo = "^2024.8.6"
mypy = "^1.11.2"
types-requests = "^2.32.0.20240914"
types-pygments = "^2.18.0.20240506"
ruff = "^0.6.9"
pytest = "^8.3.3"
coverage = "^7.6.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.coverage.run]
source = ["deluge_web_client"]
omit = ["*/tests/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
